# simtrack

./: .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  simtrack.rosinstall
data/object_models/ros_fuerte/: ros_fuerte.mtl
data/object_models/ros_groovy/: ros_groovy.mtl
data/object_models/ros_hydro/: ros_hydro.mtl
interface/: CMakeLists.txt  package.xml
interface/include/: multi_rigid_detector.h  multi_rigid_tracker.h
interface/src/: cmd_line_detect_object_pose.cpp  cmd_line_extract_sift.cpp  cmd_line_generate_sift_model.cpp  cmd_line_get_robot_frame.cpp  cmd_line_optical_flow.cpp  cmd_line_render.cpp  cmd_line_render_scene.cpp  cmd_line_track_multi_object.cpp  multi_rigid_detector.cpp  multi_rigid_tracker.cpp
low_level_vision/: CMakeLists.txt  package.xml
low_level_vision/include/: convolution_kernels.h  d_gabor.h  d_gabor_pyramid.h  d_image_pyramid.h  d_optical_and_ar_flow.h  optical_flow_kernels.h  utility_kernels.h
low_level_vision/src/: convolution_kernels.cu  d_gabor.cpp  d_gabor_pyramid.cpp  d_image_pyramid.cpp  d_optical_and_ar_flow.cpp  optical_flow_kernels.cu  utility_kernels.cu
low_level_vision/src/test/: utest.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/include/: d_multiple_rigid_pose_sparse.h  d_multiple_rigid_poses.h  d_point_cloud.h  multiple_rigid_models_ogre.h  multiple_rigid_pose_kernels.h  normal_equations.h  translation_rotation_3d.h  utility_kernels_pose.h
pose_estimation/src/: d_multiple_rigid_pose_sparse.cpp  d_multiple_rigid_poses.cpp  d_point_cloud.cpp  multiple_rigid_models_ogre.cpp  multiple_rigid_pose_kernels.cu  normal_equations.cpp  translation_rotation_3d.cpp  utility_kernels_pose.cu
pose_estimation/src/test/: utest.cpp
rendering/: CMakeLists.txt  package.xml
rendering/include/: env_config.h  mesh_loader.h  ogre_context.h  ogre_multi_render_target.h  rigid_object.h  robot.h  robot_link.h  stl_loader.h  windowless_gl_context.h
rendering/ogre_media/: plugins.cfg
rendering/ogre_media/materials/glsl/: textured.frag  textured.vert  untextured.frag  untextured.vert
rendering/ogre_media/materials/scripts/: textured.material  untextured.material
rendering/src/: env_config.cpp.in  mesh_loader.cpp  ogre_context.cpp  ogre_multi_render_target.cpp  rigid_object.cpp  robot.cpp  robot_link.cpp  stl_loader.cpp  windowless_gl_context.cpp
rendering/src/test/: utest.cpp
siftgpu/: CMakeLists.txt  package.xml
siftgpu/src/: GLTexImage.cpp  SiftMatchCU.cpp
simtrack/: CMakeLists.txt  package.xml
simtrack_nodes/: CMakeLists.txt  package.xml
simtrack_nodes/cfg/: Visualization.cfg
simtrack_nodes/config/: demo_objects.yaml  parameters.yaml  pr2_camera_topics.yaml
simtrack_nodes/include/simtrack_nodes/: multi_rigid_node.h  pr2_cam_switch_node.h
simtrack_nodes/launch/: camera_kinect.launch  camera_kinect2.launch  camera_xtion.launch  main.launch  main_kinect2.launch  multi-rigid.launch  multi-rigid_kinect2.launch  pr2_cam_switch.launch
simtrack_nodes/src/: multi_rigid_node.cpp  multi_rigid_node_main.cpp  pr2_cam_switch_node.cpp  pr2_cam_switch_node_main.cpp
simtrack_nodes/srv/: SwitchCamera.srv  SwitchObjects.srv
utilities/: CMakeLists.txt  package.xml
utilities/include/: cub_radix_sorter.h  cub_radix_sorter_kernels.h  device_1d.h  device_2d.h  hdf5_file.h  utilities.h
utilities/src/: cub_radix_sorter_kernels.cu  utilities.cpp
utilities/src/test/: utest.cpp
