<?xml version="1.0"?>
<package>
  <name>interface</name>
  <version>0.1.0</version>
  <description>Interface</description>
  <license>BSD</license>
  <url type="website">http://www.karlpauwels.com/simtrack</url>
  <author email="karlpauwels@users.noreply.github.com">Karl Pauwels</author>
  <maintainer email="karlpauwels@users.noreply.github.com">Karl Pauwels</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>low_level_vision</build_depend>
  <build_depend>pose_estimation</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>low_level_vision</run_depend>
  <run_depend>pose_estimation</run_depend>

</package>
