<?xml version="1.0"?>
<package>
  <name>rendering</name>
  <version>0.1.0</version>
  <description>Rendering</description>
  <maintainer email="karlpauwels@users.noreply.github.com">Karl Pauwels</maintainer>
  <license>BSD</license>
  <url type="website">http://www.karlpauwels.com/simtrack</url>
  <author email="karlpauwels@users.noreply.github.com">Karl Pauwels</author>
  <maintainer email="karlpauwels@users.noreply.github.com">Karl Pauwels</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>libogre-dev</build_depend>

  <run_depend>libx11-dev</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>libogre-dev</run_depend>

</package>
