<?xml version="1.0"?>
<package>
  <name>utilities</name>
  <version>0.1.0</version>
  <description>Utilities</description>
  <maintainer email="karlpauwels@users.noreply.github.com">Karl Pauwels</maintainer>
  <license>BSD</license>
  <url type="website">http://www.karlpauwels.com/simtrack</url>
  <author email="karl.pauwels@outlook.com">Karl Pauwels</author>
  <maintainer email="karl.pauwels@outlook.com">Karl Pauwels</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>boost</build_depend>
  <run_depend>hdf5</run_depend>
  <run_depend>boost</run_depend>

</package>
